--- a/index.html
+++ b/index.html
@@ -137,6 +137,17 @@
   }
 }
 </script>
+<script type="text/javascript">
+  window.RAYCHAT_TOKEN = "b3c7e2b1-88ed-44dd-8e00-bb67fb0d777f";
+  window.LOAD_TYPE = "SEO_FRIENDLY";
+  (function () {
+    d = document;
+    s = d.createElement("script");
+    s.src = "https://widget-react.raychat.io/install/widget.js";
+    s.async = 1;
+    d.getElementsByTagName("head")[0].appendChild(s);
+  })();
+</script>
 </head>
 <body class="text-[#111111] selection:bg-[#ea4037] selection:text-white">
   <div class="scroll-progress" id="progress-bar"></div>
